# live555-CMake

./: .gitignore  CMakeLists.txt  Live_versions.txt  README.md
live/BasicUsageEnvironment/: CMakeLists.txt
live/UsageEnvironment/: CMakeLists.txt
live/groupsock/: CMakeLists.txt
live/liveMedia/: CMakeLists.txt
live/mediaServer/: CMakeLists.txt
live/proxyServer/: CMakeLists.txt
live/testProgs/: CMakeLists.txt
